[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.6.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-ollama>=1.0.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.0",
    "mcp>=1.19.0",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "psycopg>=3.2.11",
    "pypdf>=6.1.2",
]
